Added a h1 header and a short paragraph

--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     Hellow World!
+    <h1>Welcome to my third trial of websites</h1>
+    <p>
+    I'm slowly learning how git works. Such as when a change is made on a piece of code, one will have to perform the git add command first.
+    </p>
 </body>
 </html>
