--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
 <body>
     Hellow World!
     <h1>Welcome to my third trial of websites</h1>
+    <h2>Paragraph on progress</h2>
     <p>
     I'm slowly learning how git works. Such as when a change is made on a piece of code, one will have to perform the git add command first.
     </p>
