--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     Hellow World!
-    <h1>Welcome to my third trial of websites. Just say a merge conflict is to occur coz the changes don't match</h1>
+    <h1 style= "color: red">Welcome to my third trial of websites. Just say a merge conflict is to occur coz the changes don't match</h1>
     <h2>Paragraph on progress</h2>
     <p>
     I'm slowly learning how git works. Such as when a change is made on a piece of code, one will have to perform the git add command first.
